ER-141: Float material wrappers right on desktop to align content. Fix material content width on small screens.

--- a/sites/all/themes/orwell/sass/component/_ting-object.scss
+++ b/sites/all/themes/orwell/sass/component/_ting-object.scss
@@ -64,7 +64,7 @@ $material--teaser__margin-bottom: 1.2rem;
 
     @include grid-media($small) {
       padding-left: 2rem;
-      width: 100%;
+      width: percentage(2 / 3);
       margin-bottom: 0;
     }
 
@@ -308,7 +308,7 @@ $material--teaser__margin-bottom: 1.2rem;
 
       @include grid-media($medium) {
         padding: 0;
-        float: left;
+        float: right;
         display: block !important;
         width: percentage(2 / 3);
       }
